until some time in 2025. So there is plenty of time to convert existing parsers to
the new function names before the old functions are completely removed. (Big help from
Devin J. Pohly in structuring the code to enable this peaceful transition.)


Version 3.2.2 - under development
---------------------------------
- Fixed bug in `nested_expr` where nested contents were stripped of whitespace when
  the default whitespace characters were cleared (raised in this StackOverflow
  question https://stackoverflow.com/questions/79327649 by Ben Alan). Also addressed
  bug in resolving PEP8 compliant argument name and legacy argument name.

- Better exception message for `MatchFirst` and `Or` expressions, showing all alternatives
  rather than just the first one. Fixes Issue #592, reported by Focke, thanks!

- Added return type annotation of "-> None" for all `__init__()` methods, to satisfy
  `mypy --strict` type checking. PR submitted by FeRD, thank you!

- Added optional argument `show_hidden` to create_diagram` to show
  elements that are used internally by pyparsing, but are not part of the actual
  parser grammar. For instance, the `Tag` class can insert values into the parsed
  results but it does not actually parse any input, so by default it is not included
  in a railroad diagram. By calling `create_diagram` with `show_hidden` = `True`,
  these internal elements will be included. (You can see this in the tag_metadata.py
  script in the examples directory.)

- Fixed bug in number_words.py example. Also added ebnf_number_words.py to demonstrate
  using the ebnf.py EBNF parser generator to build a similar parser directly from
  EBNF.

- Fixed syntax warning raised in bigquery_view_parser.py, invalid escape sequence "\s".
  Reported by sameer-google, nice catch! (Issue #598)

- Added support for Python 3.14.


Version 3.2.1 - December, 2024
------------------------------
- Updated generated railroad diagrams to make non-terminal elements links to their related