@@ -14,6 +14,17 @@ Devin J. Pohly in structuring the code to enable this peaceful transition.)
 
 Version 3.2.2 - under development
 ---------------------------------
+- In preparation for version 3.3.0 release, which will begin emitting `DeprecationWarnings`
+  for pyparsing methods that have been renamed to PEP8-compliant names, I have added
+  a utility for finding and replacing the old method names with the new names. This utility
+  is located at `pyparsing/tools/cvt_pep8_names.py`. This script will scan all Python files
+  specified on the command line, and will replace all occurrences of the old method names
+  with the new PEP8-compliant names, updating the files in place.
+
+  Here is an example that converts all the files in the pyparsing `/examples` directory:
+
+      python -m pyparsing.tools.cvt_pyparsing_pep8_names .\examples\*.py
+
 - Fixed bug in `nested_expr` where nested contents were stripped of whitespace when
   the default whitespace characters were cleared (raised in this StackOverflow
   question https://stackoverflow.com/questions/79327649 by Ben Alan). Also addressed
